# astromate-app

./: .dockerignore  .env  .gitignore  .markdownlint.jsonc  AGENTS.md  Dockerfile  README.md  ai.py  archive.py  cities.csv  cities.db  const.py  docker-compose.yml  learning_mode.md  main.py  mock.csv  pdf.css  preprocess_cities.ipynb  pyproject.toml  screenwidth_detector.js  style.css  synastry_questions.md  ui.py  utils.py
.streamlit/: config.toml
docs/: index.html  manifest.json
scripts/: migrate_add_openrouter_api_key.py
tests/: test_birth.py  test_transit.py
