[project]
name = "astromate-app"
version = "1.2.1"
description = "A handy astrology app"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib",
    "natal",
    "openai",
    "streamlit",
    "tagit",
    "weasyprint>=66.0",
]

[tool.ruff]
isort.no-sections = true
line-length = 120
extend-ignore = ["E203", "E402", "E501", "E712", "F401", "F811"]

# [tool.uv.sources]
# natal = { path = "../natal", editable = true }

[dependency-groups]
dev = ["ipykernel", "pytest", "watchdog"]
